<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnQS"
            android:textAlignment="center"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView5"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Pablo Rodriguez solis"
            android:textAlignment="center"
            android:textColor="#4C4C4C" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Brandon Montoya Gutierrez"
            android:textAlignment="center"
            android:textColor="#4C4C4C" />

        <TextView
            android:id="@+id/textView7"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Francisco Paniagua Claure"
            android:textAlignment="center"
            android:textColor="#4C4C4C" />

        <TextView
            android:id="@+id/textView4"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:text="@string/QuienesSomos"
            android:textAlignment="center"
            android:textColor="#4C4C4C"
            android:textSize="24sp"
            app:autoSizeTextType="none" />

        <ImageView
            android:id="@+id/iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/imagen"
            android:src="@drawable/amigos"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>